<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".AuthActivity" android:background="@drawable/background_main">

    <TextView
            android:text="@string/login_create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:textColor="@android:color/white" android:textSize="9sp"
            android:fontFamily="@font/proximanovaregular"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="40dp"
            android:id="@+id/guideline_left"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="40dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:id="@+id/loginInputLayout"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:background="@drawable/background_auth_input"
            android:elevation="2dp"
            android:translationZ="0dp"
            android:stateListAnimator="@null"
            android:layout_marginTop="12dp">

        <EditText
                android:elevation="10dp"
                android:layout_height="57dp"
                android:inputType="textPersonName"
                android:id="@+id/emailText"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                android:textSize="12sp"
                android:drawablePadding="12dp" android:padding="8dp"
                android:layout_width="0dp" android:hint="@string/login_username" android:textColorLink="@color/biru"
                android:fontFamily="@font/proximanovaregular" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:translationZ="1dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/emailText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="#E3E9EC"
                android:id="@+id/view4"/>
        <EditText
                android:layout_height="57dp"
                android:inputType="textPassword"
                android:id="@+id/passwodText"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                android:textSize="12sp"
                android:drawablePadding="12dp" android:padding="8dp"
                android:layout_width="0dp" android:hint="@string/login_password"
                android:textColorLink="@color/biru"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                android:fontFamily="@font/proximanovaregular" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:translationZ="1dp"
                app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
            android:text="@string/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:textColor="@android:color/white" android:textSize="9sp"
            android:fontFamily="@font/proximanovaregular"/>
    <Button
            android:text="@string/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:background="@drawable/background_auth_input"
            android:elevation="2dp"
            android:translationZ="0dp"
            android:stateListAnimator="@null"
            android:fontFamily="@font/proximaovabold"
            android:textSize="14sp"
            android:textColor="#229D5F"
            android:padding="0dp"/>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="3dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:background="@android:color/transparent" android:id="@+id/frameLayout">
        <ProgressBar
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                android:layout_marginTop="-3dp"
                android:indeterminateTint="@color/kuning"
        />
    </FrameLayout>

    <ImageView
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:src="@drawable/logo"
            android:transitionName="logoTransition"
            android:layout_width="90dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="@+id/frameLayout" android:id="@+id/logo"/>
    <TextView
            android:text="@string/login_title_1"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:fontFamily="@font/proximaovabold" android:textSize="36sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" android:textAlignment="center" android:layout_width="0dp"/>
    <TextView
            android:text="@string/login_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@android:color/white"
            android:fontFamily="@font/proximanovaregular" android:textSize="18sp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right" android:layout_marginTop="8dp"/>
    <FrameLayout
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:layout_marginStart="1dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2">

        <Button
                android:text="AR"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:background="@null"
                android:drawableStart="@drawable/flag_ar"
                android:drawablePadding="2dp"
                android:layout_height="wrap_content" android:id="@+id/btnAR"/>
    </FrameLayout>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.5"/>
    <FrameLayout
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="2dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/frameLayout2">

        <Button
                android:text="EN"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:background="@null"
                android:drawableStart="@drawable/flag_en"
                android:drawablePadding="2dp"
                android:layout_height="wrap_content" android:id="@+id/btnEN"/>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>